Modifying the logic behind customer profile, fix checkstyle issues